--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     environment:
       - MONGO_INITDB_ROOT_DATABASE=thedbname
       - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=root 
+      - MONGO_INITDB_ROOT_PASSWORD=root
     ports:
       - 27017:27017
 
@@ -35,7 +35,8 @@ services:
      - mongodb
     image: renzholy/mongood:latest    
     environment:
-      - MONGO_URIS=["mongodb://mongodb:27017/thedbname"] #que quede como environment de main
+      - MONGO_URI=mongodb://root:root@127.0.0.1:27017/thedbname?authSource=admin
+      
     ports:
       - "3001:3000"
 
