--- a/docker-compose-old.yml
+++ b/docker-compose-old.yml
@@ -29,16 +29,18 @@ services:
     ports:
       - 27017:27017
 
-  mongo-express:
-      links:
-      - mongodb
-      image: mongo-express
-      container_name: mongo_express
-      ports:
-        - 8081:8081
-      environment: 
-        - ME_CONFIG_MONGODB_ADMINUSERNAME=root
-        - ME_CONFIG_MONGODB_ADMINPASSWORD=root
-        - ME_CONFIG_MONGODB_SERVER=mongo1
+  mongood:
+    container_name: mongo1-client
+    links:
+     - mongodb
+    image: renzholy/mongood:latest    
+    environment:
+      - MONGO_URI=mongodb://root:root@127.0.0.1:27017/thedbname?authSource=admin
+      
+    ports:
+      - "3001:3000"
 
 
+
+  
+     
